[package]
name = "bevy_ninepatch_shader"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { path = "../bevy/crates/bevy_app", version = "0.4.0" }
bevy_asset = { path = "../bevy/crates/bevy_asset", version = "0.4.0" }
bevy_ecs = { path = "../bevy/crates/bevy_ecs", version = "0.4.0" }
bevy_reflect = { path = "../bevy/crates/bevy_reflect", version = "0.4.0", features = ["bevy"] }
bevy_render = { path = "../bevy/crates/bevy_render", version = "0.4.0" }
bevy_ui = { path = "../bevy/crates/bevy_ui", version = "0.4.0" }
bevy_sprite = { path = "../bevy/crates/bevy_sprite", version = "0.4.0" }
bevy_transform = { path = "../bevy/crates/bevy_transform", version = "0.4.0" }
bevy_derive = { path = "../bevy/crates/bevy_derive", version = "0.4.0" }
bevy_math = { path = "../bevy/crates/bevy_math", version = "0.4.0" }
